# Machine-Vision-and-Neural-Network-Design-for-Electrical-Switching-Stations-

./: .gitignore  CMakeLists.txt  README.md
apps/switch_status_inspection_image_proc/: CMakeLists.txt  main.cpp
apps/text_detection_east/: CMakeLists.txt
apps/text_recognition_tesseract/: CMakeLists.txt
models/: frozen_east_text_detection.pb
switch-vision-ocr/: .gitignore
switch-vision-ocr/apps/switch_status_inspection_image_proc+OCR/: CMakeLists.txt  main.cpp
switch-vision-ocr/apps/text_detection_east/: main.cpp
switch-vision-ocr/apps/text_recognition_tesseract/: main.cpp
